--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "listen.js",
   "type": "module",
+  "bin": {
+    "listen": "listen.js",
+    "listen_floor": "opensea-bot/listen_floor.js"
+  },
   "scripts": {
     "test": "node test/listen_rinkeby"
   },
@@ -12,10 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "@alch/alchemy-web3": "^1.3.0",
-    "api": "^4.3.0",
     "axios": "^0.26.1",
     "chalk": "^5.0.1",
-    "dingtalk-robot-sender": "^1.2.0",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.2",
     "minimst": "^0.0.1-security",
