--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@alch/alchemy-web3": "^1.3.0",
+    "@flashbots/ethers-provider-bundle": "^0.4.3",
     "axios": "^0.26.1",
     "chalk": "^5.0.1",
     "dotenv": "^16.0.0",
