--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MAINNET_PRIVATE_KEY = ""
 RINKEBY_PRIVATE_KEY = ""
-ALCHEMY_KEY = "0VLC-"
+ALCHEMY_KEY = ""
 ETHERSCAN_KEY = ""
 EMAIL_ACCOUNT = ""
 EMAIL_PASSWARD = ""
