feature: add wechat notification

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ ALCHEMY_KEY = "alchemy API key"
 ETHERSCAN_KEY = "etherscan API key"
 EMAIL_ACCOUNT = "qq账号，注意只需要账号"
 EMAIL_PASSWARD = "qq邮箱密码"
+WECHAT_KEY='微信推送的key'
+WECHAT_UID='微信UID'
