--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "@alch/alchemy-web3": "^1.3.0",
+    "alchemy-sdk": "^2.1.1",
     "axios": "^0.26.1",
     "chalk": "^5.0.1",
+    "cli-progress": "^3.11.1",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.2",
     "minimst": "^0.0.1-security",
